<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/countdownText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/court_down_to_election_day"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="263dp"
        android:layout_height="186dp"
        app:layout_constraintBottom_toTopOf="@+id/nameText1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/nameText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameTH"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/nameText2"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/nameText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameEng"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/countdownText"
        app:layout_constraintEnd_toEndOf="@+id/nameText1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/nameText1"
        app:layout_constraintTop_toBottomOf="@+id/nameText1" />

    <TextView
        android:id="@+id/numDaysText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/bg_day"
        android:gravity="center"
        android:text="@string/daysNum"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/numHoursText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countdownText" />

    <TextView
        android:id="@+id/numHoursText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/bg_hour"
        android:gravity="center"
        android:text="@string/hoursNum"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/numDaysText"
        app:layout_constraintEnd_toStartOf="@+id/numMinutesText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/numDaysText"
        app:layout_constraintTop_toTopOf="@+id/numDaysText"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/numMinutesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/bg_minute"
        android:gravity="center"
        android:text="@string/minutesNum"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/numHoursText"
        app:layout_constraintEnd_toStartOf="@+id/numSecondsText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/numHoursText"
        app:layout_constraintTop_toTopOf="@+id/numHoursText" />

    <TextView
        android:id="@+id/numSecondsText"
        android:layout_width="68dp"
        android:layout_height="67dp"
        android:background="@drawable/bg_second"
        android:gravity="center"
        android:text="@string/secondsNum"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/numMinutesText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/numMinutesText"
        app:layout_constraintTop_toTopOf="@+id/numMinutesText" />

    <TextView
        android:id="@+id/daysText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/days"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/numDaysText"
        app:layout_constraintStart_toStartOf="@+id/numDaysText"
        app:layout_constraintTop_toBottomOf="@+id/numDaysText" />

    <TextView
        android:id="@+id/hoursText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hours"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/numHoursText"
        app:layout_constraintStart_toStartOf="@+id/numHoursText"
        app:layout_constraintTop_toBottomOf="@+id/numHoursText" />

    <TextView
        android:id="@+id/MinutesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minutes"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/numMinutesText"
        app:layout_constraintStart_toStartOf="@+id/numMinutesText"
        app:layout_constraintTop_toBottomOf="@+id/numMinutesText" />

    <TextView
        android:id="@+id/SecondsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seconds"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/numSecondsText"
        app:layout_constraintStart_toStartOf="@+id/numSecondsText"
        app:layout_constraintTop_toBottomOf="@+id/numSecondsText" />

    <Button
        android:id="@+id/nextBut"
        android:layout_width="125dp"
        android:layout_height="45dp"
        android:gravity="center"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hoursText" />
</androidx.constraintlayout.widget.ConstraintLayout>